Modify some detail of naive_bayes
Modifying the implementation of Naive Bayes algorithm

--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -186,7 +186,7 @@
     "        self.lambd = lambd\n",
     "        self.vocabs = None\n",
     "        self.prior_prob = None\n",
-    "        self.conditional_y_prob = None\n",
+    "        self.conditional_prob = None\n",
     "    \n",
     "    def fit(self, data_x, data_y):\n",
     "        \"\"\"训练，为了计算先验概率与条件概率\"\"\"\n",
@@ -203,7 +203,7 @@
     "        self.prior_prob = {}\n",
     "        for cate in set(data_y):\n",
     "            # 采用贝叶斯估计\n",
-    "            prior_prob[cate] = (data_y.count(cate) + self.lambd) / (len(data_y) + cate_num_k * self.lambd)\n",
+    "            self.prior_prob[cate] = (data_y.count(cate) + self.lambd) / (len(data_y) + cate_num_k * self.lambd)\n",
     "        \n",
     "        # 将数据按照类别不同划分为多个组\n",
     "        group_data = {} \n",
@@ -212,53 +212,58 @@
     "            for idx, example_label in enumerate(data_y):\n",
     "                if example_label == cate:\n",
     "                    sub_data_x.append(data_vec[idx])\n",
-    "            group_data[cate] = np.asarray(sub_data)\n",
+    "            group_data[cate] = np.asarray(sub_data_x)\n",
     "        \n",
     "        # 计算每个类别的特征的条件概率\n",
     "        print(\"开始计算条件概率...\")\n",
-    "        self.conditional_y_prob = {}\n",
+    "        # 所有类别下所有特征的不同取值的条件概率。\n",
+    "        self.conditional_prob = {}\n",
     "        for cate in set(data_y):\n",
-    "            cate_data = group_data[cate]\n",
-    "            \n",
-    "            # 计算某类子数据集中 每个特征的 取值个数 Sj\n",
-    "            features_values_num_count = np.zeros(cate_data.shape[1])            \n",
-    "            for column in range(cate_data.shape[1]):\n",
-    "                feature_value = cate_data[:, column]\n",
-    "                featrue_value_num = len(collections.Counter(featrue_value))\n",
-    "                features_values_num_count[column] = featrue_value_num\n",
-    "            \n",
+    "            cate_data = group_data[cate]  \n",
     "            # 某类子数据集的样本个数\n",
     "            num_cate = cate_data.shape[0]\n",
-    "            cate_data_conditional_y_prob = (np.sum(cate_data, axis=0) + self.lambd) / (num_cate + features_values_num_count * self.lambd)\n",
-    "            \n",
-    "            self.conditional_y_prob[cate] = cate_data_conditional_y_prob\n",
     "         \n",
+    "            feature_one_cond_prob = (np.sum(cate_data, axis=0) + self.lambd) / (num_cate + np.array([2] * cate_data.shape[1]) * self.lambd)\n",
+    "            feature_zero_cond_prob = (np.array([cate_data.shape[0]] * cate_data.shape[1]) - np.sum(cate_data, axis=0)) / (num_cate + np.array([2] * cate_data.shape[1]) * self.lambd)\n",
+    "                \n",
+    "            self.conditional_prob[cate] = [feature_zero_cond_prob, feature_one_cond_prob]\n",
     "        stop_time = time.time()\n",
     "        print(\"训练结束，耗时：{0} 秒\".format(str(stop_time-start_time)))\n",
     "        \n",
-    "        return self.prior_prob, self.conditional_y_prob\n",
+    "        return self.prior_prob, self.conditional_prob\n",
     "        \n",
     "    \n",
     "    def predict(self, data_test):\n",
     "        \"\"\"预测，在新的数据集上\"\"\"\n",
     "        \n",
-    "        if self.prior_prob is None or self.conditional_y_prob is None or self.vocabs is None:\n",
+    "        if self.prior_prob is None or self.conditional_prob is None or self.vocabs is None:\n",
     "            raise NameError(\"模型未训练，没有可用的参数\")\n",
     "        test_data_vec = self.convert_data_to_vec(data_test, self.vocabs)\n",
     "        \n",
     "        # 测试集在每个类别上的后验概率\n",
     "        test_cate_prob = np.zeros((test_data_vec.shape[0], len(self.prior_prob)))\n",
     "        \n",
-    "        idx = 0\n",
+    "        cate_idx = 0\n",
     "        # 创建一个类别名称的列表，用于之后对结果的索引\n",
     "        cates_name = []\n",
     "        # 计算测试集每个样本在每个类别上的后验概率\n",
     "        for cate in self.prior_prob.keys():\n",
     "            cate_prior_prob = self.prior_prob[cate]\n",
-    "            cate_conditional_y_prob = self.conditional_y_prob[cate]           \n",
-    "            test_cate_prob[:, idx] = cate_prior_prob * np.multiply.reduce(test_data_vec * cate_conditional_y_prob, axis=1)\n",
-    "            cates_name.append(cate)\n",
-    "            idx += 1\n",
+    "            cate_features_conditional_prob = self.conditional_prob[cate]\n",
+    "            \n",
+    "            cate_test_data_cond_prob = []\n",
+    "            \n",
+    "            for example in test_data_vec:\n",
+    "                example_feature_prob = 0.0\n",
+    "                for idx, feature_value in enumerate(example.tolist()):\n",
+    "                    example_feature_prob += cate_features_conditional_prob[int(feature_value)][idx]\n",
+    "                    \n",
+    "                cate_test_data_cond_prob.append(example_feature_prob)\n",
+    "            log_cate_union_prob = np.log(np.asarray(cate_test_data_cond_prob) + cate_prior_prob)\n",
+    "            test_cate_prob[:, cate_idx] = log_cate_union_prob\n",
+    "            cates_name.append(cate)        \n",
+    "            cate_idx += 1\n",
+    "            \n",
     "        # 取后验概率最大的索引\n",
     "        argmax_idx = np.argmax(test_cate_prob, axis=1)\n",
     "        # 索引出类别名称\n",
@@ -281,13 +286,12 @@
     "                if word in vocabs:\n",
     "                    data_vec[row][column] = 1\n",
     "        return data_vec\n",
-    "    \n",
     "                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,28 +301,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "开始构建词表...\n"
+      "开始构建词表...\n",
+      "生成训练数据矩阵\n",
+      "开始计算先验概率...\n",
+      "开始计算条件概率...\n",
+      "训练结束，耗时：435.9030749797821 秒\n"
      ]
     }
    ],
    "source": [
-    "NBClassifier.fit(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_result = NBClassifier.predict(X_test)"
+    "prior_prob, conditional_prob = NBClassifier.fit(X_train[0:2000], Y_train.tolist()[0:2000])"
    ]
   },
   {
