--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,20 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"From: Mamatha Devineni Ratnam <mr47+@andrew.cmu.edu>\\nSubject: Pens fans reactions\\nOrganization: Post Office, Carnegie Mellon, Pittsburgh, PA\\nLines: 12\\nNNTP-Posting-Host: po4.andrew.cmu.edu\\n\\n\\n\\nI am sure some bashers of Pens fans are pretty confused about the lack\\nof any kind of posts about the recent Pens massacre of the Devils. Actually,\\nI am  bit puzzled too and a bit relieved. However, I am going to put an end\\nto non-PIttsburghers' relief with a bit of praise for the Pens. Man, they\\nare killing those Devils worse than I thought. Jagr just showed you why\\nhe is much better than his regular season stats. He is also a lot\\nfo fun to watch in the playoffs. Bowman should let JAgr have a lot of\\nfun in the next couple of games since the Pens are going to beat the pulp out of Jersey anyway. I was very disappointed not to see the Islanders lose the final\\nregular season game.          PENS RULE!!!\\n\\n\""
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "news.data[0]"
    ]
@@ -105,12 +94,12 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## 构建一个辅助函数用于处理文本中的符号，并切词"
+    "## 构建一些辅助函数用于文本处理"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +110,25 @@
     "        example = re.sub(\"[\\s+\\.\\!\\/_,$%^*(+\\\"\\']+|[+——！，\\n。？、~@#￥%……&*（）]+\", \" \", example)\n",
     "        example = re.sub(r\"\\W\", \" \", example)\n",
     "        processed_data.append(example.lower().split())\n",
-    "    return processed_data"
+    "    return processed_data\n",
+    "\n",
+    "# 生成词典\n",
+    "def generate_vocab(data_x):\n",
+    "    \"\"\"生成词表\"\"\"\n",
+    "    vocabs = set([])\n",
+    "    for example in data_x:\n",
+    "        vocabs = vocabs | set(example)\n",
+    "    return list(vocabs)\n",
+    "\n",
+    "# 文本转换为向量\n",
+    "def convert_data_to_vec(data_x, vocabs):\n",
+    "    \"\"\"将文本数据集转换为向量，得到数据集矩阵，矩阵高为文本个数，宽为词汇表大小\"\"\"\n",
+    "    data_vec = np.zeros((len(data_x), len(vocabs)))\n",
+    "    for row, example in enumerate(data_x):\n",
+    "        for column, word in enumerate(example):\n",
+    "            if word in vocabs:\n",
+    "                data_vec[row][column] = 1\n",
+    "    return data_vec"
    ]
   },
   {
@@ -137,20 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((14134, 14134), (4712, 4712))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(news.data, news.target, test_size=0.25, random_state=33)\n",
     "\n",
@@ -159,13 +155,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 预处理文本\n",
     "X_train = process_text(X_train)\n",
-    "X_test = process_text(X_test)"
+    "X_test = process_text(X_test)\n",
+    "\n",
+    "vocabs = generate_vocab(X_train[0:2000])\n",
+    "\n",
+    "X_train_sub = convert_data_to_vec(X_train[0:2000], vocabs)\n",
+    "X_test_sub = convert_data_to_vec(X_test[0:20], vocabs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_sub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_train_sub = Y_train[0:2000]\n",
+    "Y_test_sub = Y_test[0:20]"
    ]
   },
   {
@@ -177,33 +197,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NaiveBayesClassifier():\n",
-    "    def __init__(self, lambd):\n",
+    "    def __init__(self, lambd=1.0):\n",
     "        self.lambd = lambd\n",
-    "        self.vocabs = None\n",
     "        self.prior_prob = None\n",
     "        self.conditional_prob = None\n",
     "    \n",
     "    def fit(self, data_x, data_y):\n",
     "        \"\"\"训练，为了计算先验概率与条件概率\"\"\"\n",
-    "        start_time = time.time()\n",
-    "        print(\"开始构建词表...\")\n",
-    "        self.vocabs = self.generate_vocab(data_x)\n",
-    "        print(\"生成训练数据矩阵\")\n",
-    "        data_vec = self.convert_data_to_vec(data_x, self.vocabs)\n",
-    "        \n",
-    "        cate_num_k = len(set(data_y))\n",
+    "        start_time = time.time()      \n",
     "        \n",
     "        # 计算先验概率\n",
     "        print(\"开始计算先验概率...\")\n",
+    "        cate_num_k = len(set(data_y))\n",
     "        self.prior_prob = {}\n",
     "        for cate in set(data_y):\n",
     "            # 采用贝叶斯估计\n",
-    "            self.prior_prob[cate] = (data_y.count(cate) + self.lambd) / (len(data_y) + cate_num_k * self.lambd)\n",
+    "            self.prior_prob[cate] = (data_y.tolist().count(cate) + self.lambd) / (len(data_y) + cate_num_k * self.lambd)\n",
+    "        \n",
+    "        # 对训练集的每个特征的取值进行统计\n",
+    "        every_feature_count = []\n",
+    "        for feature_idx in range(data_x.shape[1]):\n",
+    "            feature_value = data_x[:, feature_idx]\n",
+    "            feature_diff_value_count = collections.Counter(feature_value)\n",
+    "            every_feature_count.append(feature_diff_value_count)\n",
     "        \n",
     "        # 将数据按照类别不同划分为多个组\n",
     "        group_data = {} \n",
@@ -211,7 +232,7 @@
     "            sub_data_x = []\n",
     "            for idx, example_label in enumerate(data_y):\n",
     "                if example_label == cate:\n",
-    "                    sub_data_x.append(data_vec[idx])\n",
+    "                    sub_data_x.append(data_x[idx])\n",
     "            group_data[cate] = np.asarray(sub_data_x)\n",
     "        \n",
     "        # 计算每个类别的特征的条件概率\n",
@@ -222,11 +243,23 @@
     "            cate_data = group_data[cate]  \n",
     "            # 某类子数据集的样本个数\n",
     "            num_cate = cate_data.shape[0]\n",
-    "         \n",
-    "            feature_one_cond_prob = (np.sum(cate_data, axis=0) + self.lambd) / (num_cate + np.array([2] * cate_data.shape[1]) * self.lambd)\n",
-    "            feature_zero_cond_prob = (np.array([cate_data.shape[0]] * cate_data.shape[1]) - np.sum(cate_data, axis=0)) / (num_cate + np.array([2] * cate_data.shape[1]) * self.lambd)\n",
+    "            \n",
+    "            every_feature_cond_prob = []    \n",
+    "            for idx in range(cate_data.shape[1]):\n",
+    "                feature_count = every_feature_count[idx]\n",
+    "                cate_feature_value = cate_data[:, idx]\n",
+    "                sj = len(feature_count)\n",
     "                \n",
-    "            self.conditional_prob[cate] = [feature_zero_cond_prob, feature_one_cond_prob]\n",
+    "                feature_cond_prob = {}\n",
+    "                for value in feature_count.keys():\n",
+    "                    ajl_count = cate_feature_value.tolist().count(value)\n",
+    "                    ajl_on_cate_prob = (ajl_count + self.lambd) / (num_cate + sj * self.lambd)                    \n",
+    "                    feature_cond_prob[value] = ajl_on_cate_prob\n",
+    "                    \n",
+    "                every_feature_cond_prob.append(feature_cond_prob)\n",
+    "                \n",
+    "            self.conditional_prob[cate] = every_feature_cond_prob\n",
+    "            \n",
     "        stop_time = time.time()\n",
     "        print(\"训练结束，耗时：{0} 秒\".format(str(stop_time-start_time)))\n",
     "        \n",
@@ -236,12 +269,11 @@
     "    def predict(self, data_test):\n",
     "        \"\"\"预测，在新的数据集上\"\"\"\n",
     "        \n",
-    "        if self.prior_prob is None or self.conditional_prob is None or self.vocabs is None:\n",
+    "        if self.prior_prob is None or self.conditional_prob is None:\n",
     "            raise NameError(\"模型未训练，没有可用的参数\")\n",
-    "        test_data_vec = self.convert_data_to_vec(data_test, self.vocabs)\n",
     "        \n",
     "        # 测试集在每个类别上的后验概率\n",
-    "        test_cate_prob = np.zeros((test_data_vec.shape[0], len(self.prior_prob)))\n",
+    "        test_cate_prob = np.zeros((data_test.shape[0], len(self.prior_prob)))\n",
     "        \n",
     "        cate_idx = 0\n",
     "        # 创建一个类别名称的列表，用于之后对结果的索引\n",
@@ -249,17 +281,24 @@
     "        # 计算测试集每个样本在每个类别上的后验概率\n",
     "        for cate in self.prior_prob.keys():\n",
     "            cate_prior_prob = self.prior_prob[cate]\n",
-    "            cate_features_conditional_prob = self.conditional_prob[cate]\n",
+    "            every_feature_cond_prob = self.conditional_prob[cate]   # 是个列表\n",
     "            \n",
+    "            # 所有样本的概率\n",
     "            cate_test_data_cond_prob = []\n",
     "            \n",
-    "            for example in test_data_vec:\n",
-    "                example_feature_prob = 0.0\n",
+    "            # 对每个样本进行计算\n",
+    "            for example in data_test:\n",
+    "                example_feature_prob = []\n",
     "                for idx, feature_value in enumerate(example.tolist()):\n",
-    "                    example_feature_prob += cate_features_conditional_prob[int(feature_value)][idx]\n",
-    "                    \n",
+    "                    feature_cond_prob = every_feature_cond_prob[idx]\n",
+    "                    if feature_value in feature_cond_prob.keys():                 \n",
+    "                        example_feature_prob.append(feature_cond_prob[feature_value])\n",
+    "                    else:\n",
+    "                        example_feature_prob.append(1.0)\n",
     "                cate_test_data_cond_prob.append(example_feature_prob)\n",
-    "            log_cate_union_prob = np.log(np.asarray(cate_test_data_cond_prob) + cate_prior_prob)\n",
+    "            \n",
+    "            # 求所有样本在 cate 类上的对数联合概率              \n",
+    "            log_cate_union_prob = np.sum(np.log(np.asarray(cate_test_data_cond_prob)), axis=1) + np.log(cate_prior_prob)\n",
     "            test_cate_prob[:, cate_idx] = log_cate_union_prob\n",
     "            cates_name.append(cate)        \n",
     "            cate_idx += 1\n",
@@ -270,28 +309,12 @@
     "        test_cate_result = [cates_name[idx] for idx in argmax_idx]\n",
     "        \n",
     "        return test_cate_result\n",
-    "    \n",
-    "    def generate_vocab(self, data_x):\n",
-    "        \"\"\"生成词表\"\"\"\n",
-    "        vocabs = set([])\n",
-    "        for example in data_x:\n",
-    "            vocabs = vocabs | set(example)\n",
-    "        return list(vocabs)\n",
-    "    \n",
-    "    def convert_data_to_vec(self, data_x, vocabs):\n",
-    "        \"\"\"将文本数据集转换为向量，得到数据集矩阵，矩阵高为文本个数，宽为词汇表大小\"\"\"\n",
-    "        data_vec = np.zeros((len(data_x), len(vocabs)))\n",
-    "        for row, example in enumerate(data_x):\n",
-    "            for column, word in enumerate(example):\n",
-    "                if word in vocabs:\n",
-    "                    data_vec[row][column] = 1\n",
-    "        return data_vec\n",
     "                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,23 +324,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "开始构建词表...\n",
-      "生成训练数据矩阵\n",
-      "开始计算先验概率...\n",
-      "开始计算条件概率...\n",
-      "训练结束，耗时：435.9030749797821 秒\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "prior_prob, conditional_prob = NBClassifier.fit(X_train[0:2000], Y_train.tolist()[0:2000])"
+    "prior_prob, conditional_prob = NBClassifier.fit(X_train_sub, Y_train_sub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_test_sub_predict = NBClassifier.predict(X_test_sub)"
    ]
   },
   {
