update introduction of KNN

--- a/KNN/KNN.ipynb
+++ b/KNN/KNN.ipynb
@@ -11,14 +11,14 @@
     "* 距离的度量\n",
     "* k 值的选择\n",
     "* 分类决策规则\n",
-    "***\n",
+    "\n",
     "## 学习算法\n",
     "* 根据给定的距离度量，在训练集中找出与待分类的点 x 最邻近的 k 个点。\n",
-    "* 在得到的 k 个点钟根据分类决策规则（通常为多数表决）决定 x 的类别\n",
+    "* 在得到的 k 个点中根据分类决策规则（通常为多数表决）决定 x 的类别\n",
     "特殊情况，当 k 为1时，算法称为最近邻算法。\n",
-    "***\n",
+    "\n",
     "## 距离度量\n",
-    "特征空间中两个实例点得距离是两个实例点相似程度的反应，常用的距离度量有：欧氏距离（L2），曼哈顿距离（L1）等，更一般的$ L_p $距离。\n",
+    "特征空间中两个实例点的距离是两个实例点相似程度的反应，常用的距离度量有：欧氏距离（L2），曼哈顿距离（L1）等，更一般的$ L_p $距离。\n",
     "$ L_p $ 距离定义：\n",
     "$$ L_p(x_i,x_j)=(\\sum_{l=1}^n\\mid x_i^{(l)}-x_j^{(l)}\\mid^p)^{\\frac1p} $$\n",
     "$ p\\geq1 $. 当 p=2 时，称为欧氏距离（L2），P=1 时，称为曼哈顿距离（L1）。\n",
@@ -38,14 +38,8 @@
     "$$ P(Y\\neq f(X))=1-P(Y=f(x)) $$\n",
     "对给定的实例 x, 其最近邻的 k 个训练实例点构成集合 $ N_k(x) $。如果涵盖 $ N_k(x) $的区域类别是 $ c_j $,那么误分类率：\n",
     "$$ \\frac{1}{k}\\sum_{x_i\\in N_k(x)}I(y_i\\neq c_j)=1-\\frac{1}{k}\\sum_{x_i\\in N_k(x)}I(y_i=c_j)$$\n",
-    "要使误分类率最小即经验风险最小，就要使 $\\sum_{x_i\\in N_k(x)}I(y_i=c_j) $最大，所以多数表决等价于经验风险最小化。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***\n",
+    "要使误分类率最小即经验风险最小，就要使 $\\sum_{x_i\\in N_k(x)}I(y_i=c_j) $最大，所以多数表决等价于经验风险最小化。\n",
+    "\n",
     "## 导入相关包并获得数据\n",
     "使用 Iris 数据集"
    ]
@@ -264,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
